# pico-examples

adc/hello_adc/: CMakeLists.txt  hello_adc.c
i2c/: CMakeLists.txt
i2c/mpu6050_i2c/: mpu6050_i2c.c
i2c/sgm41511_i2c/: CMakeLists.txt  sgm41511_i2c.c
